--- a/writing/manuscript.Rmd
+++ b/writing/manuscript.Rmd
@@ -59,9 +59,7 @@ editor_options:
 
 \noindent Stefano Mezzini: stefano.mezzini@ubc.ca
 
-\noindent Simon Wood: simon.wood@bath.edu
-
-\noindent Chris H. Fleming: chris.h.fleming@gmail.com
+\noindent Chris H. Fleming: christen.fleming@ucf.edu
 
 \noindent E. Patrícia Medici: medici@ipe.org.br
 
@@ -209,7 +207,7 @@ knitr::include_graphics('../figures/habitat-examples-changing-variance.png')
 
 <!-- Most habitats with appreciable seasonal climatic changes will require models of $R$ to account for changes in both $\e(R)$ and $\var(R)$, as $\sigma^2(t)$ will often change within and between years, and periods of high $\mu(t)$ will often be more variable than times of lower productivity or dormancy. However, the effects of $\var(R)$ on organisms' space-use requirements likely vary between species, since movement capacity, and energetic and nutritional needs also vary between species [@boratynski_energetic_2020; @noonan_effects_2020]. Small-scale variations in $R$ may be sufficient to causes changes in behavior for some small organisms, while organisms with larger space-use requirements may not even notice a change. -->
 
-@rizzuto_forage_2021 found that the space-use requirements of snowshoe hares (*Lepus americanus*) increased with average carbon to nitrogen ratio (C:N, a measure of N scarcity) in lowbush blueberry as well as the coefficient of variation (the standard deviation over the mean, $\frac{\sqrt{\sigma^2(t)}}{\mu(t)}$) in C:N. However, it is hard to determine how $\sigma^2(t)$ affected the hares' space-use requirements since the coefficient of variation is a function of both $\mu(t)$ and $\sigma^2(t)$, so the effects of the two variables are confounded. Similarly, @mueller_how_2011 suggested that ecosystem variability (measured as spatial semivariance in NDVI) causes ungulates to move more and adopt more nomadic behaviors, but it is hard to determine whether the higher semivariances in NDVI are due to an increase in $\var(R)$ or simply spatial changes in $\e(R)$ (e.g., increased seasonality or continentality). Likewise, @herfindal_prey_2005 found that the home ranges of Canadian lynx (*Lynx canadensis*) decreased with seasonality, but this may be an artifact of a lower $\mu(t)$ in highly seasonal environments, rather than stochasticity in $R$. A subsequent analysis by @nilsen_can_2005 of the lynx data of @herfindal_prey_2005 along with data on wolverines (*Gulo gulo*), bobcats (*Lynx rufus*), and coyotes (*Canis latrans*) found that carnivores respond differently to seasonality, which suggests that different species may have different perceptions of the changes in $R$ over the seasons. Collectively, these studies provide support towards the effects of both $\e(R)$ and $\var(R)$ on organisms' space-use requirements, but the lack of a unifying framework across these studies makes it challenging to synthesize their findings. Thus, it is important to disentangle the effects of changes in $\e(R)$, such as seasonal trends in $\mu(t)$, and stochasticity ($\var(R)$). The need to account for changes in both $\e(R)$ and $\var(R)$ is compounded by recent changes in climate, which expose species to novel situations and increasingly common and extreme stochastic events [@intergovernmental_panel_on_climate_change_climate_2023; @noonan_situ_2018; @yao_emergence_2022].
+@rizzuto_forage_2021 found that the space-use requirements of snowshoe hares (*Lepus americanus*) increased with average carbon to nitrogen ratio (C:N, a measure of N scarcity) in lowbush blueberry as well as the coefficient of variation (the standard deviation divided by the mean, $\frac{\sqrt{\sigma^2(t)}}{\mu(t)}$) in C:N. However, it is hard to determine how $\sigma^2(t)$ affected the hares' space-use requirements since the coefficient of variation is a function of both $\mu(t)$ and $\sigma^2(t)$, so the effects of the two variables are confounded. Similarly, @mueller_how_2011 suggested that ecosystem variability (measured as spatial semivariance in NDVI) causes ungulates to move more and adopt more nomadic behaviors, but it is hard to determine whether the higher semivariances in NDVI are due to an increase in $\var(R)$ or simply spatial changes in $\e(R)$ (e.g., increased seasonality or continentality). Likewise, @herfindal_prey_2005 found that the home ranges of Canadian lynx (*Lynx canadensis*) decreased with seasonality, but this may be an artifact of a lower $\mu(t)$ in highly seasonal environments, rather than stochasticity in $R$. A subsequent analysis by @nilsen_can_2005 of the lynx data of @herfindal_prey_2005 along with data on wolverines (*Gulo gulo*), bobcats (*Lynx rufus*), and coyotes (*Canis latrans*) found that carnivores respond differently to seasonality, which suggests that different species may have different perceptions of the changes in $R$ over the seasons. Collectively, these studies provide support towards the effects of both $\e(R)$ and $\var(R)$ on organisms' space-use requirements, but the lack of a unifying framework across these studies makes it challenging to synthesize their findings. Thus, it is important to disentangle the effects of changes in $\e(R)$, such as seasonal trends in $\mu(t)$, and stochasticity ($\var(R)$). The need to account for changes in both $\e(R)$ and $\var(R)$ is compounded by recent changes in climate, which expose species to novel situations and increasingly common and extreme stochastic events [@intergovernmental_panel_on_climate_change_climate_2023; @noonan_situ_2018; @yao_emergence_2022].
 
 @nilsen_can_2005 also show that the effect of $\e(R)$ on the home-range size of wolves and fishers (*Martes pennanti*) depends on seasonality (and vice-versa), since organisms in habitats with high and low seasonality had opposite responses to $\e(R)$. Therefore, it may not be sufficient to account for the effects of $\e(R)$ and $\var(R)$; models may also need a term for interaction between the two. This may be because organisms respond strongly to $\sigma^2(t)$ when $\mu(t)$ is low, but they may not respond if $\mu(t)$ is sufficiently high. However, it does not explain why organisms may respond to $\e(R)$ in opposite ways in different habitats. Instead, we suspect this inconsistency is because @nilsen_can_2005 do not distinguish between changes in $\mu(t)$ and $\sigma^2(t)$ between seasons, so the effects of the two are confounded in the seasonality term. Distinguishing between changes in $\e(R)$ and $\var(R)$ allows one to separate the two seasonal cycles and produce more consistent results.
 
