--- a/writing/appendix-2-simulations.Rmd
+++ b/writing/appendix-2-simulations.Rmd
@@ -5,6 +5,8 @@ author:
   - name: Stefano Mezzini
     email: stefano.mezzini@ubc.ca
     institute: [biol, braes]
+  - name: Chris H. Fleming
+    institute: [ucf, smith]
   - name: E. Patrícia Medici
     institute: [tapir, iucn, escas]
   - name: Michael J. Noonan
@@ -13,6 +15,8 @@ author:
 institute:
   - biol: Department of Biology, The University of British Columbia Okanagan, Kelowna, British Columbia, Canada.
   - braes: Okanagan Institute for Biodiversity, Resilience, and Ecosystem Services, The University of British Columbia Okanagan, Kelowna, British Columbia, Canada.
+  - ucf: Department of Biology, University of Central Florida, Orlando, Florida 32816, United States.
+  - smith: Smithsonian Conservation Biology Institute, National Zoological Park, 1500 Remount Rd., Front Royal, VA 22630, United States.
   - tapir: Lowland Tapir Conservation Initiative (LTCI), Instituto de Pesquisas Ecológicas (IPÊ), Rodovia Dom Pedro I, km 47, Nazaré Paulista, São Paulo 12960-000, Brazil.
   - iucn: IUCN SSC Tapir Specialist Group (TSG), Campo Grande, Brazil.
   - escas: Escola Superior de Conservação Ambiental E Sustentabilidade (ESCAS/IPÊ), Rodovia Dom Pedro I, km 47, Nazaré Paulista, São Paulo 12960-000, Brazil.
@@ -248,12 +252,12 @@ ggplot(all) +
   facet_wrap(~ replicates) +
   geom_line(aes(animal, diff_est, group = paste(mean, variance)),
             alpha = 0.1) +
-  geom_hline(yintercept = 0, color = 'darkorange') +
+  geom_hline(yintercept = 0, color = 'red') +
   labs(x = 'Time',
        y = 'Difference in average daily exploration time (hours)')
 ```
 
-```{r, echo=FALSE, eval=TRUE, fig.cap="Difference in average time required to reach satiety for each scenario in figure 1 (indicated by each line) and different amounts of tracks (indicated at the top of each facet). The differences are relative to simulations with $2^{10}=1024$ tracks for each time point on the x axis (and each scenario in figure 1). The amount of time stabilizes for $\\gtrapprox 100$ tracks, which suggests that the home range estimates should also be stable with more than 100 tracks.", fig.pos='!h'}
+```{r, echo=FALSE, eval=TRUE, fig.cap="Difference in average time required to reach satiety for each scenario in figure 1 (indicated by each line) and different amounts of tracks (indicated at the top of each facet). The differences are relative to simulations with $2^{10}=1024$ tracks for each time point on the x axis (and each scenario in figure 1). The amount of time stabilizes for $\\gtrapprox 100$ tracks, which suggests that the home range estimates should also be stable with more than 100 tracks.", fig.pos='!h', out.width='\\textwidth'}
 knitr::include_graphics('../figures/5-by-5-sensitivity-analysis/time-to-satiety-difference.png',
                         rel_path = FALSE)
 ```
@@ -274,7 +278,7 @@ ggplot(all) +
 
 \clearpage
 
-```{r, echo=FALSE, eval=TRUE, fig.cap="Ratios of average time required to reach satiety for each scenario in figure 1 (indicated by each line) and different amounts of tracks (indicated at the top of each facet). The ratios are relative to simulations with $2^{10}=1024$ tracks for each time point on the x axis (and each scenario in fig. 1). The amount of time stabilizes for $\\gtrapprox 100$ tracks, which suggests that the home range estimates should also be stable with more than 100 tracks.", fig.pos='!h'}
+```{r, echo=FALSE, eval=TRUE, fig.cap="Ratios of average time required to reach satiety for each scenario in figure 1 (indicated by each line) and different amounts of tracks (indicated at the top of each facet). The ratios are relative to simulations with $2^{10}=1024$ tracks for each time point on the x axis (and each scenario in fig. 1). The amount of time stabilizes for $\\gtrapprox 100$ tracks, which suggests that the home range estimates should also be stable with more than 100 tracks.", fig.pos='!h', out.width='\\textwidth'}
 knitr::include_graphics('../figures/5-by-5-sensitivity-analysis/time-to-satiety-rel-difference.png',
                         rel_path = FALSE)
 ```
@@ -339,6 +343,7 @@ days_summarized <-
          timestamp = as.POSIXct(t, origin = '2000-01-01')) %>% # new times 
   ungroup() # remove grouping by scenario
 
+
 # estimate saturation curve of home range size over number of days
 saturation_days <-
   expand_grid(n_days = (2^seq(1, log2(1e3), by = 0.2)) %>%
@@ -357,9 +362,6 @@ saturation_days <-
          }), # fit movement model
          sigma = map_dbl(m, \(.m) ctmm:::area.covm(.m$sigma)), # var(pos)
          hr = get_hr(.sigma = sigma, quantile = 0.95)) # Gaussian HR
-
-saveRDS(saturation_days, 'simulations/hr-saturation-days.rds')
-
 
 saturation_days %>%
   select(case, n_days, sigma, hr) %>%
@@ -380,7 +382,7 @@ ggplot(saturation_days, aes(n_days, hr)) +
                      trans = 'log2')
 ```
 
-```{r, eval=TRUE, echo=FALSE, fig.cap="Estimated space-use requirements as a function of the number of days sampled for an animal in a habitat with the highest $\\e(R)$ and lowest $\\var(R)$ (left) and an animal with the lowest $\\e(R)$ and highest $\\var(R)$ (right). In both cases, 100 days are sufficient to produce stable estimates of space-use requirements.", cache=FALSE}
+```{r, eval=TRUE, echo=FALSE, fig.cap="Estimated space-use requirements as a function of the number of days sampled for an animal in a habitat with the highest $\\e(R)$ and lowest $\\var(R)$ (left) and an animal with the lowest $\\e(R)$ and highest $\\var(R)$ (right). In both cases, 100 days are sufficient to produce stable estimates of space-use requirements.", cache=FALSE, out.width='75%', fig.height=8, fig.width=12}
 knitr::include_graphics('../figures/hr-over-days.png', rel_path = FALSE)
 ```
 
@@ -434,7 +436,7 @@ ggplot(sims, aes(mu, sigma2)) +
 
 The abundance of data for the average $\e(R)$ and $\var(R)$ did not create biases in the models, since removing such values had no appreciable effect on the model estimates (not shown). To estimate the effects of resource abundance and stochasticity on the simulated space-use requirements, we fit 3 location-scale GAMs (GAMLSs) with a location-scale gamma distribution (since home ranges are strictly positive) of increasing complexity. We hypothesized that the effect of $\e(R)$ would depend on $\var(R)$ (and the effect of $\var(R)$ would depend on $\e(R)$), since we expected organisms to respond to changes in $\mu(t)$ less in predictable environments than in stochastic ones. The three models are detailed below and compared using the Akaike Information Criterion and the Bayesian Information Criterion. Both information criteria demonstrate that the third model, which accounts for the interaction effects of $\e(R)$ and $\var(R)$, is the best model.
 
-```{r, eval=TRUE}
+```{r, eval=TRUE, fig.height=8, fig.width=8, out.width='65%'}
 # marginal effects of mu and sigma only (linear on the log link scale)
 m_1 <- gam(
   list(
@@ -461,12 +463,39 @@ m_3 <- gam(
   family = gammals(),
   data = sims)
 
-AIC(m_1, m_2, m_3) # smooth model with interactions is best
 
-BIC(m_1, m_2, m_3) # smooth model with interactions is best
+# check if CV = sigma/mu is better than sigma
+m_4 <- gam(
+  list(
+    hr ~ quantile + s(mu) + s(cv) + ti(mu, cv, k = 5),
+    ~ quantile + s(mu) + s(cv) + ti(mu, cv, k = 5)),
+  family = gammals(),
+  data = mutate(sims, cv = sqrt(sigma2) / mu))
 
+# ti term of the scale parameter looks over-fit and too uncertain
+plot(m_4, all.terms = TRUE, pages = 1, scheme = 3, scale = 0)
+
+AIC(m_1, m_2, m_3, m_4) # not much of a difference between m_3 and m_4
+BIC(m_1, m_2, m_3, m_4) # not much of a difference between m_3 and m_4
+```
+
+\clearpage
+
+```{r, eval=TRUE}
+# the difference in df (and significance) is in the ti.1() term
+summary(m_3)
+```
+
+\newpage
+
+```{r, eval=TRUE}
+summary(m_4)
+```
+
+\newpage
+
+```{r, eval=TRUE, fig.height=8, fig.width=8, out.width='65%'}
 m <- m_3 # select the best model
-summary(m)
 ```
 
 Fig. \@ref(fig:gamls-terms) shows each of the terms from model 3. The estimated effect of `quantile` (see the output of `summary()` above) supports the relationship between the gaussian HR estimates detailed above, since $\exp(1.464) = 4.323218 \approx \log_{0.5}(0.05),$ but there is no differences in the scale parameter between the two quantiles. Additionally, the interaction term of $\mu(t)$ and $\sigma^2(t)$ on the mean HR indicates that the effect of $\sigma^2(t)$ is stronger at lower values of $\mu(t)$ (e.g., $\mu(t) = 100$), since the estimated effect is negative for low values of $\sigma^2(t)$ and positive for high values of $\sigma^2(t)$, which accentuates the effect of $\sigma^2(t)$ on the mean home range. The opposite is true for high values of $\mu(t)$, where the effect of $\sigma^2(t)$ becomes flatter, and thus weaker. Similar but opposite conclusions can be drawn from the interaction term for the scale parameter, since the effect of $\sigma^2(t)$ on the scale parameter is weaker when $\mu(t)$ is low and stronger when $\mu(t)$ is high.
@@ -494,8 +523,11 @@ preds_mu <- bind_cols( # bind new data and predictions
     transmute(hr = exp(fit.1),
               hr_lwr = exp(fit.1 - se.fit.1 * 1.96),
               hr_upr = exp(fit.1 + se.fit.1 * 1.96)))
+```
 
+\newpage
 
+```{r, eval=TRUE}
 # effect of sigma2
 newd_sigma2 <-
   expand_grid(mu = mean(sims$mu),
@@ -511,9 +543,10 @@ preds_sigma2 <- bind_cols(
               hr_lwr = exp(fit.1 - se.fit.1 * 1.96),
               hr_upr = exp(fit.1 + se.fit.1 * 1.96)))
 
-# final figure
-e_r <- 'Resource abundance'
-v_r <- 'Resource stochasticity'
+# final figure (Rmd throws and error with label_bquote)
+e_r <- 'paste(bold("Resource abundance, E("), bolditalic("R"), bold(")"))'
+v_r <-
+  'paste(bold("Resource stochasticity, Var("), bolditalic("R"), bold(")"))'
 
 preds <- bind_rows(mutate(preds_mu, x = e_r) %>%
                      rename(value = mu) %>%
@@ -526,19 +559,25 @@ sims_l <- sims %>%
   mutate(e = hr - predict(m, newdata = sims, type = 'response')[, 1]) %>%
   pivot_longer(c(mu, sigma2)) %>%
   mutate(x = if_else(name == 'mu', e_r, v_r))
+```
 
+\newpage
+
+```{r, eval=TRUE}
 ggplot() +
-  facet_grid(. ~ x, scales = 'free', switch = 'x') + # label below x axis
+  facet_grid(. ~ x, scales = 'free', switch = 'x',
+             labeller = label_parsed) + # label below x axis
   geom_point(aes(value, hr), filter(sims_l, quantile == 'hr_95'),
              alpha = 0.1, color = pal[3]) +
   # 95% CIs are present but hidden under the estimates
   geom_ribbon(aes(value, ymin = hr_lwr, ymax = hr_upr, fill = x),
               filter(preds, quantile == 'hr_95'), alpha = 0.5) +
   geom_line(aes(value, hr, color = x),
-            filter(preds, quantile == 'hr_95')) +
+            filter(preds, quantile == 'hr_95'), linewidth = 2) +
   scale_color_manual(values = pal) +
   scale_x_continuous(NULL, breaks = NULL) + 
-  scale_y_continuous('Home range size', breaks = NULL) +
+  scale_y_continuous(bquote(paste(bold('Space-use requirements, '),
+                                  bolditalic('H'))), breaks = NULL) +
   theme_bw() +
   # to make facet strip look like the x axis
   theme(legend.position = 'none',
