added a ref of E(R) and H

--- a/writing/manuscript.Rmd
+++ b/writing/manuscript.Rmd
@@ -136,7 +136,7 @@ knitr::knit_hooks$set(plot = function(x, options) { # set the new plot hook...
 
 # Introduction
 
-\noindent The amount of resources an organism is able to access is a strong determinant of its odds of survival and reproduction. Resource limitations can cause individuals to experience a negative energetic balance, which can then result in lower fitness [@hou_cold_2020; @le_bot_fishery_2019], altered physiology [@dai_pra_ground_2022; @rocha_life_2021; @le_bot_fishery_2019; @wessling_seasonal_2018], lower chance of reproduction [@stefanescu_timing_2021; @schmidt_interplay_2020; @le_bot_fishery_2019; @douglas_relative_2014], and even death [@foley_severe_2008; @berger_climate_2018], along with changes to community structure [@haney_tipping_2018; @burson_competition_2018; @riotte-lambert_environmental_2020; @ghislandi_resource_2018]. Thus, many organisms will adapt their behaviors in response to changes in local resource abundance to ensure their needs are met. Some species may respond to fluctuations in resource abundance by, if possible, switching to other food sources [@steinmetz_effects_2021; @le_bot_fishery_2019], reducing energetic costs by lowering body heat [@schmidt_interplay_2020], or entering hibernation or torpor [@fjelldal_nightly_2021; @mohr_cellular_2020; @boyles_optimal_2020]. However, movement represents one of the most readily available behaviors that species can adjust, whether this be by modifying their home range [@bista_effect_2022; @bradsworth_using_2022; @lucherini_habitat_1996; @relyea_home_2000; @yu_artificial_2022; @arechavala-lopez_common_2019], migrating [@middleton_green-wave_2018; @geremia_migrating_2019], moving nomadically [@teitelbaum_beyond_2019; @nandintsetseg_variability_2019], or dispersing [framework: @southwood_habitat_1977; amphibians: @cayuela_determinants_2020; birds: @pretorius_movement_2020; @wheat_migrate_2017; mammals: @singh_migration_2012].
+\noindent The amount of resources an organism is able to access is a strong determinant of its odds of survival and reproduction. Resource limitations can cause individuals to experience a negative energetic balance, which can then result in lower fitness [@hou_cold_2020; @le_bot_fishery_2019], altered physiology [@dai_pra_ground_2022; @rocha_life_2021; @le_bot_fishery_2019; @wessling_seasonal_2018], lower chance of reproduction [@stefanescu_timing_2021; @schmidt_interplay_2020; @le_bot_fishery_2019; @douglas_relative_2014], and even death [@foley_severe_2008; @berger_climate_2018], along with changes to community structure [@haney_tipping_2018; @burson_competition_2018; @riotte-lambert_environmental_2020; @ghislandi_resource_2018]. Thus, many organisms will adapt their behaviors in response to changes in local resource abundance to ensure their needs are met. Some species may respond to fluctuations in resource abundance by, if possible, switching to other food sources [@steinmetz_effects_2021; @le_bot_fishery_2019], reducing energetic costs by lowering body heat [@schmidt_interplay_2020], or entering hibernation or torpor [@fjelldal_nightly_2021; @mohr_cellular_2020; @boyles_optimal_2020]. However, movement represents one of the most readily available behaviors that species can adjust, whether this be by modifying their home range [@hirt_environmental_2021; @bista_effect_2022; @bradsworth_using_2022; @lucherini_habitat_1996; @relyea_home_2000; @yu_artificial_2022; @arechavala-lopez_common_2019], migrating [@middleton_green-wave_2018; @geremia_migrating_2019], moving nomadically [@teitelbaum_beyond_2019; @nandintsetseg_variability_2019], or dispersing [framework: @southwood_habitat_1977; amphibians: @cayuela_determinants_2020; birds: @pretorius_movement_2020; @wheat_migrate_2017; mammals: @singh_migration_2012].
 
 The relationship between organisms' movement and resource abundance has been of interest to biologists for nearly a century. @burt_territoriality_1943 considered the search for food as the primary driver for movement within an organism's home range. Three decades after, @southwood_habitat_1977 suggested that change in resource abundance is a strong determinant of how organisms decide where to live and when to reproduce. Two years later, @harestad_home_1979 proposed that the simplest relationship between resource abundance and an organism's home-range size is
 
